packages/kit/test/apps/basics/src/routes/errors/endpoint-throw-redirect/+server.js
import { redirect } from '@tg-svelte/kit';

export function GET() {
	redirect(302, '/');
}
